--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -7,20 +7,25 @@
 
 \chapter{Notation}
 
-\begin{tabular}{|c|c|}
-\hline
-\bf{Notation} & \bf{Explanation} \tabularnewline
-\hline
-$ \underline{v} $ & A vector. \tabularnewline
-\hline
-$ M = \left( m_{ij} \right) $ & A matrix. \tabularnewline
-\hline
-$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector. \tabularnewline
-\hline
-$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector. \tabularnewline
-\hline
-$s \,=\, \left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar/inner product, the sums over $i$ and $j$ are implied \cite{wiki_summation}. \tabularnewline
-\hline
-$\left(a^{i}_{\;j}\right) \,=\, \left| x \right> \left< y \right| \,=\, x^i y_j$ & A tensor/outer product. \tabularnewline
-\hline
-\end{tabular}
+\begin{table}[htb]
+	\centering
+	\begin{tabular}{|c|c|}
+		\hline
+		\bf{Notation} & \bf{Explanation} \tabularnewline
+		\hline
+		$ \underline{v} $ & A vector (contravariant or covariant). \tabularnewline
+		\hline
+		$ M = \left( m_{ij} \right) $ & A matrix. \tabularnewline
+		\hline
+		$\left| x \right> \,=\, \left( x^i \right) $ & A contravariant vector. \tabularnewline
+		\hline
+		$\left< x \right| \,=\, \left( x_i \right) $ & A covariant vector. \tabularnewline
+		\hline
+		$s \,=\, \left< x | y \right> \,=\, x_i y^i \,=\, g_{ij} x^i y^j $ & A scalar/inner product, the sums over $i$ and $j$ are implied \cite{wiki_summation}. \tabularnewline
+		\hline
+		$\left(a^{i}_{\;j}\right) \,=\, \left| x \right> \left< y \right| \,=\, x^i y_j$ & A tensor/outer product. \tabularnewline
+		\hline
+	\end{tabular}
+	\caption[Symbol notation]{Notation of used symbols.}
+	\label{tab:notation}
+\end{table}
