--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -4,6 +4,28 @@
 
 @book
 {
+	Bronstein2008,
+	author = {Ilja N. Bronstein and Heiner M\"uhlig and Gerhard Musiol and Konstantin A. Semendjajew},
+	title = {{Taschenbuch der Mathematik}},
+	year = {2008},
+	publisher = {Verlag Harry Deutsch‎},
+	isbn = {978-3-8171-2017-8},
+}
+
+
+@book
+{
+	Kuipers2002,
+	author = {Kuipers, J. B.},
+	title = {{Quaternions and Rotation Sequences}},
+	year = {2002},
+	publisher = {Princeton University Press},
+	isbn = {0-691-10298-8},
+}
+
+
+@book
+{
 	Merzbacher1998,
 	author = {Merzbacher, E.},
 	title = {{Quantum Mechanics, Third Edition}},
@@ -936,6 +958,18 @@
 	url = "https://www.opengl.org/",
 	OPThowpublished = "\url{https://www.opengl.org/}",
 	note = "[Online; accessed 31-July-2021]",
+}
+
+
+@misc
+{
+	web_Vulkan,
+	title = {{Vulkan (Software}},
+	author = {{Khronos Group, Beaverton, OR, USA}},
+	year = {2021},
+	url = "https://www.vulkan.org/",
+	OPThowpublished = "\url{https://www.vulkan.org/}",
+	note = "[Online; accessed 17-August-2021]",
 }
 
 
