--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -92,7 +92,7 @@
 
 % TODO: add chapter letters
 \listoffigures{}
-%\listoftables{}
+\listoftables{}
 \cleardoublepage
 \addcontentsline{toc}{chapter}{List of Listings}
 \listof{listing}{List of Listings}
