--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -612,6 +612,17 @@
 
 @misc
 {
+	wiki_quatrot,
+	author = "{Wikipedia contributors}",
+	title = {{Quaternions and spatial rotation --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Quaternions_and_spatial_rotation&oldid=1038414751",
+	note = "[Online; accessed 17-August-2021]"
+}
+
+
+@misc
+{
 	web_aabb,
 	author = {{Mozilla Developer Network Web Docs}},
 	title = {{3D collision detection}},
