--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -504,6 +504,28 @@
 
 @misc
 {
+	wiki_tripleprod,
+	author = {{Wikipedia contributors}},
+	title = {{Triple product --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Triple_product&oldid=1038432970",
+	note = "[Online; accessed 18-August-2021]"
+}
+
+
+@misc
+{
+	wiki_trig,
+	author = {{Wikipedia contributors}},
+	title = {{List of trigonometric identities --- {Wikipedia}{,} The Free Encyclopedia}},
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=List_of_trigonometric_identities&oldid=1038600860",
+	note = "[Online; accessed 18-August-2021]"
+}
+
+
+@misc
+{
 	wiki_fission,
 	author = {{Wikipedia contributors}},
 	title = {{Discovery of nuclear fission --- {Wikipedia}{,} The Free Encyclopedia}},
