--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -5,10 +5,10 @@
 @book
 {
 	Bronstein2008,
-	author = {Ilja N. Bronstein and Heiner M\"uhlig and Gerhard Musiol and Konstantin A. Semendjajew},
-	title = {{Taschenbuch der Mathematik}},
+	author = {Ilja N. Bronstein and Konstantin A. Semendjajew and Gerhard Musiol and Heiner M\"uhlig},
+	title = {{Taschenbuch der Mathematik, Siebte Auflage}},
 	year = {2008},
-	publisher = {Verlag Harry Deutsch‎},
+	publisher = {Wissenschaftlicher Verlag Harri Deutsch‎ GmbH, Frankfurt am Main, Germany},
 	isbn = {978-3-8171-2017-8},
 }
 
@@ -21,6 +21,17 @@
 	year = {2002},
 	publisher = {Princeton University Press},
 	isbn = {0-691-10298-8},
+}
+
+
+@book
+{
+	Sellers2002,
+	author = {Graham Sellers and Richard S. Wright, Jr. and Nicholas Haemel},
+	title = {{OpenGL SuperBible: Comprehensive Tutorial and Reference, Sixth Edition}},
+	year = {2014},
+	publisher = {Addison-Wesley},
+	isbn = {978-0-321-90294-8},
 }
 
 
