--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1064,6 +1064,39 @@
 
 @misc
 {
+	web_gl_translate,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glTranslate --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glTranslate.xml",
+	note = "[Online; accessed 19-August-2021]"
+}
+
+
+@misc
+{
+	web_gl_scale,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glScale --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glScale.xml",
+	note = "[Online; accessed 19-August-2021]"
+}
+
+
+@misc
+{
+	web_gl_rotate,
+	author = {{Silicon Graphics, Inc.}},
+	title = {{glRotate --- OpenGL Reference}},
+	year = "1991-2006",
+	url = "https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/glRotate.xml",
+	note = "[Online; accessed 19-August-2021]"
+}
+
+
+@misc
+{
 	web_gl_perspective,
 	author = {{Silicon Graphics, Inc.}},
 	title = {{gluPerspective --- OpenGL Reference}},
